--- a/package.json
+++ b/package.json
@@ -3,15 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "build:nexus-typegen": "ts-node --transpile-only src/modules/graphql/schema.ts",
+    "predev": "yarn run build:nexus-typegen && yarn run generate",
     "dev": "next dev",
+    "prebuild": "yarn run build:nexus-typegen && yarn run generate",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@prisma/client": "^3.11.1",
     "@types/cors": "^2.8.12",
     "apollo-server-micro": "^3.6.5",
     "cors": "^2.8.5",
+    "deepmerge": "^4.2.2",
+    "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "micro": "^9.3.4",
     "next": "12.1.0",
     "nexus": "^1.3.0",
@@ -19,10 +28,21 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "2.6.2",
+    "@graphql-codegen/typescript": "2.4.8",
+    "@graphql-codegen/typescript-operations": "2.3.5",
+    "@graphql-codegen/typescript-react-apollo": "3.2.11",
+    "@types/lodash": "^4.14.181",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "prisma": "^3.11.1",
+    "ts-node": "^10.7.0",
     "typescript": "4.6.2"
+  },
+  "prisma": {
+    "schema": "src/modules/prisma/schema.prisma",
+    "seed": "ts-node ./modules/prisma/seed.ts"
   }
 }
