--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^3.11.1",
     "@types/cors": "^2.8.12",
     "apollo-server-micro": "^3.6.5",
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "graphql": "^16.3.0",
@@ -25,16 +26,19 @@
     "next": "12.1.0",
     "nexus": "^1.3.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/typescript": "2.4.8",
     "@graphql-codegen/typescript-operations": "2.3.5",
     "@graphql-codegen/typescript-react-apollo": "3.2.11",
+    "@types/bcrypt": "^5.0.0",
     "@types/lodash": "^4.14.181",
     "@types/node": "17.0.23",
     "@types/react": "17.0.42",
+    "@types/uuid": "^9.0.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "prisma": "^3.11.1",
