--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
     "graphql": "^16.3.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "micro": "^9.3.4",
     "next": "12.1.0",
     "nexus": "^1.3.0",
+    "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "uuid": "^9.0.0"
@@ -35,8 +37,10 @@
     "@graphql-codegen/typescript-operations": "2.3.5",
     "@graphql-codegen/typescript-react-apollo": "3.2.11",
     "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.181",
     "@types/node": "17.0.23",
+    "@types/nookies": "^2.0.3",
     "@types/react": "17.0.42",
     "@types/uuid": "^9.0.0",
     "eslint": "8.11.0",
