--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "test": "jest --config jest.config.ts ./__tests__"
   },
   "dependencies": {
     "@apollo/client": "^3.5.10",
@@ -37,6 +38,7 @@
     "@graphql-codegen/typescript-operations": "2.3.5",
     "@graphql-codegen/typescript-react-apollo": "3.2.11",
     "@types/bcrypt": "^5.0.0",
+    "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.181",
     "@types/node": "17.0.23",
@@ -45,7 +47,9 @@
     "@types/uuid": "^9.0.0",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
+    "jest": "^29.3.1",
     "prisma": "^3.11.1",
+    "ts-jest": "^29.0.3",
     "ts-node": "^10.7.0",
     "typescript": "4.6.2"
   },
