--- a/package.json
+++ b/package.json
@@ -4,57 +4,58 @@
   "private": true,
   "scripts": {
     "build:nexus-typegen": "ts-node --transpile-only src/modules/graphql/schema.ts",
-    "predev": "yarn run build:nexus-typegen && yarn run generate",
+    "predev": "yarn run build:nexus-typegen",
     "dev": "next dev",
     "prebuild": "yarn run build:nexus-typegen && yarn run generate",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
     "generate": "graphql-codegen --config codegen.yml",
-    "test": "jest --config jest.config.ts ./__tests__"
+    "test": "jest --config jest.config.ts ./__tests__",
+    "type-check": "tsc"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.10",
-    "@prisma/client": "^3.11.1",
-    "@types/cors": "^2.8.12",
-    "apollo-server-micro": "^3.6.5",
+    "@apollo/client": "^3.7.2",
+    "@apollo/server": "^4.3.0",
+    "@as-integrations/next": "^1.2.0",
+    "@prisma/client": "^4.7.1",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "deepmerge": "^4.2.2",
-    "graphql": "^16.3.0",
+    "graphql": "^16.6.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
-    "micro": "^9.3.4",
-    "next": "12.1.0",
+    "micro": "^10.0.1",
+    "next": "13.0.7",
     "nexus": "^1.3.0",
     "nookies": "^2.5.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/typescript": "2.4.8",
-    "@graphql-codegen/typescript-operations": "2.3.5",
-    "@graphql-codegen/typescript-react-apollo": "3.2.11",
+    "@graphql-codegen/cli": "2.16.1",
+    "@graphql-codegen/typescript": "2.8.5",
+    "@graphql-codegen/typescript-operations": "2.5.10",
+    "@graphql-codegen/typescript-react-apollo": "3.3.7",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/jest": "^29.2.4",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/lodash": "^4.14.181",
-    "@types/node": "17.0.23",
-    "@types/nookies": "^2.0.3",
-    "@types/react": "17.0.42",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "18.11.17",
+    "@types/react": "18.0.26",
     "@types/uuid": "^9.0.0",
-    "eslint": "8.11.0",
-    "eslint-config-next": "12.1.0",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.0.7",
     "jest": "^29.3.1",
-    "prisma": "^3.11.1",
+    "prisma": "^4.7.1",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.7.0",
-    "typescript": "4.6.2"
+    "ts-node": "^10.9.1",
+    "typescript": "4.9.4"
   },
   "prisma": {
     "schema": "src/modules/prisma/schema.prisma",
-    "seed": "ts-node ./modules/prisma/seed.ts"
+    "seed": "ts-node .src/modules/prisma/seed.ts"
   }
 }
