--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build:nexus-typegen": "ts-node --transpile-only src/modules/graphql/schema.ts",
-    "predev": "yarn run build:nexus-typegen",
-    "dev": "next dev",
+    "dev": "concurrently \"next dev\" \"yarn run generate --watch\"",
     "prebuild": "yarn run build:nexus-typegen && yarn run generate",
     "build": "next build",
     "start": "next start",
@@ -46,16 +44,17 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/uuid": "^9.0.0",
+    "concurrently": "^7.6.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "jest": "^29.3.1",
     "prisma": "^4.7.1",
     "ts-jest": "^29.0.3",
-    "ts-node": "^10.9.1",
+    "ts-node-dev": "^2.0.0",
     "typescript": "4.9.4"
   },
   "prisma": {
     "schema": "src/modules/prisma/schema.prisma",
-    "seed": "ts-node .src/modules/prisma/seed.ts"
+    "seed": "ts-node-dev .src/modules/prisma/seed.ts"
   }
 }
