--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "next lint",
     "generate": "graphql-codegen --config codegen.yml",
     "test": "jest --config jest.config.ts ./__tests__",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "cron": "ts-node-dev src/modules/cron/index.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.7.2",
@@ -26,6 +27,8 @@
     "micro": "^10.0.1",
     "next": "13.0.7",
     "nexus": "^1.3.0",
+    "node-cron": "^3.0.2",
+    "node-fetch": "2.6.1",
     "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -42,6 +45,7 @@
     "@types/jsonwebtoken": "^8.5.9",
     "@types/lodash": "^4.14.191",
     "@types/node": "18.11.17",
+    "@types/node-cron": "^3.0.7",
     "@types/react": "18.0.26",
     "@types/uuid": "^9.0.0",
     "concurrently": "^7.6.0",
